Update VOLUME OF SHALE (VSH) ESTIMATION FROM DEN-NEU, GR, SP (ONE WELL WITH UP TO TEN ZONES).ipynb

--- a/VSH Estimation/VOLUME OF SHALE (VSH) ESTIMATION FROM DEN-NEU, GR, SP (ONE WELL WITH UP TO TEN ZONES).ipynb
+++ b/VSH Estimation/VOLUME OF SHALE (VSH) ESTIMATION FROM DEN-NEU, GR, SP (ONE WELL WITH UP TO TEN ZONES).ipynb
@@ -89,7 +89,7 @@
    "metadata": {},
    "source": [
     "<a id='VAR'></a>\n",
-    "# <big><font color='#D35400'>**VARIABLES STATEMENT**</font></big>\n",
+    "# <big><font color='#D35400'>VARIABLES STATEMENT</font></big>\n",
     "\n",
     "- Variables creation for data processing and visualization purposes.(missing curves will be created with nan values, for avoiding matplotlib errors)"
    ]
