--- a/VSH Estimation/VSH estimation from Den-Neu, GR, SP (one well with up to ten zones).ipynb
+++ b/VSH Estimation/VSH estimation from Den-Neu, GR, SP (one well with up to ten zones).ipynb
@@ -89,7 +89,7 @@
    "metadata": {},
    "source": [
     "<a id='VAR'></a>\n",
-    "# <big><font color='#D35400'>**VARIABLES STATEMENT**</font></big>\n",
+    "# <big><font color='#D35400'>VARIABLES STATEMENT</font></big>\n",
     "\n",
     "- Variables creation for data processing and visualization purposes.(missing curves will be created with nan values, for avoiding matplotlib errors)"
    ]
